# tue-api-wrapper

./: .gitignore  AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSING.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  package-lock.json  package.json
package/: .dockerignore  Dockerfile  README.md  pyproject.toml
package/src/tue_api_wrapper/: __init__.py  alma_academics_cli.py  alma_academics_html.py  alma_catalog_client.py  alma_catalog_html.py  alma_catalog_models.py  alma_catalog_tree_html.py  alma_course_assignments_client.py  alma_course_assignments_models.py  alma_course_credits.py  alma_course_registration_client.py  alma_course_registration_html.py  alma_course_registration_models.py  alma_course_search_client.py  alma_course_search_html.py  alma_course_search_matching.py  alma_course_search_models.py  alma_detail_client.py  alma_detail_forms.py  alma_detail_html.py  alma_detail_tabs.py  alma_documents_cli.py  alma_documents_html.py  alma_enrollment_html.py  alma_enrollment_models.py  alma_feature_client.py  alma_feature_html.py  alma_feature_models.py  alma_official_documents.py  alma_partial.py  alma_planner_client.py  alma_planner_html.py  alma_planner_models.py  alma_portal_messages_client.py  alma_portal_messages_html.py  alma_portal_messages_models.py  alma_studyservice_client.py  alma_studyservice_models.py  alma_timetable_client.py  (+88 more)
package/tests/: test_alma_course_assignments.py  test_alma_course_registration.py  test_alma_course_search_matching.py  test_alma_detail_tabs.py  test_alma_discovery_features.py  test_alma_enrollment_html.py  test_alma_portal_messages_features.py  test_alma_study_planner_progress.py  test_alma_timetable_contract_variants.py  test_api_course_detail_route.py  test_api_error_translation.py  test_campus_food_contract.py  test_contract.py  test_course_discovery.py  test_course_portal_status.py  test_dashboard_builder.py  test_dashboard_study_progress.py  test_directory_client.py  test_discovered_contracts.py  test_edit_actions.py  test_extended_contracts.py  test_feedback_api.py  test_ilias_auth.py  test_ilias_learning_auth.py  test_mail_client.py  test_moodle_contracts.py  test_public_products.py  test_route_discovery_audit.py  test_sdk_facade.py  test_seatfinder_client.py
(+518 files in other folders)
